# Static-Checker

./: .gitignore  README.md  pyproject.toml  run.py  source.261
bobenzo_examples_cods/: exemplo_completo.261
docs/correcoes/: 01-correcoes-aplicadas.md  02-decisoes-e-pendencias.md  03-pipeline-qualidade.md  README.md
src/: main.py
src/application/: scope_manager.py  static_checker_service.py
src/domain/: shared_types.py
src/domain/lexer/: lexer.py
src/domain/lexer/recognizers/: char_recognizer.py  identifier_recognizer.py  number_recognizer.py  string_recognizer.py  symbol_recognizer.py  token_recognizer.py
src/domain/protocols/: char_stream.py
src/domain/symbol_table/: reserved_words_table.py  symbol_entry.py  symbol_table.py  symbol_type.py
src/domain/token/: atom_code.py  token.py  token_factory.py
src/infrastructure/io/: double_buffer.py  file_reader.py
src/infrastructure/reports/: lex_report_writer.py  tab_report_writer.py
src/shared/constants/: __init__.py
src/shared/exceptions/: __init__.py  lex_exceptions.py
tests/: test_identifier_recognizer.py  test_lexer.py  test_number_recognizer.py  test_symbol_table.py
tests/fixtures/: exemplo.261
