[project]
name = "bobenzo-static-checker"
version = "1.0.0"
description = "Static Checker para a linguagem BobEnzo2026-1"
requires-python = ">=3.11"
dependencies = [
    "pyinstaller>=6.21.0",
]

[project.scripts]
checker = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/main.py"]

[tool.coverage.report]
fail_under = 80

[tool.mypy]
strict = true
python_version = "3.11"
